[tool.poetry]
name = "hexfiles"
version = "1.1.0"
description = "A simple loader for Motorola SREC, Intel HEX, and TI-TXT files."
authors = ["toolCHAINZ"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bincopy = "^17.14.5"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
ruff = "^0.0.269"
black = "^23.3.0"
nox-poetry = "^1.0.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
target-version = "py38"
extend-select = [
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "RUF", # ruff
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
extend-ignore = ["RUF005"]
src = ["src"]